Fix contributor names spacing

--- a/css/style.css
+++ b/css/style.css
@@ -769,7 +769,7 @@ ul li {
 #contributorsButtons ul li, #hostsButtons ul li {
 	font-size: 14px;
     display: inline;
-    padding: 0 45px 0 0;
+    padding: 0 30px 0 0;
     cursor: default;
 }
 #contributorsButtons ul li:hover, #hostsButtons ul li:hover {
